kondai overflow issue fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -277,8 +277,9 @@ h2 {
 
     .swiper {
         margin-left: 2em;
+        margin-right: 0;
         padding: 3em 0em 3em 0em;
-        width: 100%;
+        width: 100hw;
         height: 350px;
       }
 
